Added more veiw models, fixed mobile layouts and other minor issues

--- a/Service/appsettings.json
+++ b/Service/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=172.17.0.1,1433;Database=BookStore2.0;User Id=sa;Password=31415926Punko;Integrated Security=False;Persist Security Info=False;"
+    "DefaultConnection": "Server=localhost;Database=BookStore2.0;User Id=sa;Password=31415926Punko;Integrated Security=False;Persist Security Info=False;"
   },
   "Logging": {
     "LogLevel": {
